Enhance documentation and refactor repositories and models
- Added detailed Javadoc comments to WebConfig, BulletRepository, CaseRepository, PowderRepository, PrimerRepository, and their respective model classes (Bullet, Case, Powder, Primer) to improve code clarity and maintainability.
- Updated the equals() method in Bullet, Case, Powder, and Primer classes to exclude ownerId for business equality.
- Improved the CurrentUser annotation and its resolver to provide clearer documentation on usage and functionality.
- Enhanced SecurityUtils to utilize Java 25 pattern matching for cleaner code.
- Refactored controller classes (BulletController, CaseController, PowderController, PrimerController) to include comprehensive Javadoc comments for better understanding of their purpose and functionality.
- Simplified test cases in BulletRepositoryTest, CaseRepositoryTest, PowderRepositoryTest, and PrimerRepositoryTest by removing unnecessary variable assignments and improving readability.